--- a/meetings/user_list.html
+++ b/meetings/user_list.html
@@ -31,7 +31,7 @@
 
 <div class="container">
 
-<h2>Choose the free times that you are avaliable </h2>
+<h2> Choose times for a possible meeting. </h2>
 <br>
 
 <!--
@@ -106,8 +106,8 @@
 </div>
 
 <div class="col-md-6">
-  <h3> Admin's Possible Meeting Times </h3>
-  <p>Choose the times you can make it to</p>
+  <h3> Admin's Suggested Meeting Times </h3>
+  <p>Choose times you are willing to meet</p>
   <form action="/update" method="post">
     {% for time in session.meet.times %}
   <p>
